Checking UI updates...

--- a/site/guide/configuration/_add-roles.qmd
+++ b/site/guide/configuration/_add-roles.qmd
@@ -3,7 +3,7 @@
 
 1. Under User Permissions, select **Roles**.
 
-1. Click **{{< fa plus >}} Add New Role**.
+1. Click **{{< fa plus >}} Add Role**.
 
 1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.^[Role names and model stakeholder type names cannot be duplicated to reduce confusion.]
 
@@ -15,7 +15,7 @@ a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 a. Under User Permissions, select **Roles**.
 
-a. Click **{{< fa plus >}} Add New Role**.
+a. Click **{{< fa plus >}} Add Role**.
 
 a. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
 
