--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -34,7 +34,7 @@ Dashboards allow you to use widgets to quickly review and access information by 
 
 4. Click **Add New Dashboard** to create your dashboard.
 
-5. Once created, add widgets to your dashboard.[^1]
+5. Once created, [add widgets to your dashboard](#manage-widgets).
 
 ### Edit or remove dashboards
 
@@ -53,36 +53,38 @@ Deletion of dashboards is permanent.
 
 #### Edit dashboard details
 
-a. Select **{{< fa pencil >}} Edit Dashboard** to edit a **[dashboard name]{.smallcaps}**  or **[description]{.smallcaps}**.
+a. Select **{{< fa pencil >}} Details** to edit a **[dashboard name]{.smallcaps}**  or **[description]{.smallcaps}**.
+
 b. Make your edits then click **Save Changes** to apply your adjustments.
 
 
 #### Remove a dashboard
 
 a. To remove a dashboard, select **{{< fa trash-can >}} Delete**.
+
 b. After you confirm, your dashboard will be deleted.
 
 :::
 
 ## Manage widgets
 
-Widgets display information at a glance on your dashboards.[^2]
+Widgets display information at a glance on your dashboards.[^1]
 
 #### Widget types
 
 ::: {.panel-tabset}
 
 ##### {{< fa cubes >}} Model Inventory View
-Retrieves a saved model inventory view.[^3]
+Retrieves a saved model inventory view.[^2]
 
 ##### {{< fa warning >}} Model Findings View
-Retrieves a saved findings view.[^4]
+Retrieves a saved findings view.[^3]
 
 ##### {{< fa square-poll-vertical >}} Visualization
-Retrieves an analytics visualization.[^5]
+Retrieves an analytics visualization.[^4]
 
 ##### {{< fa table-cells-large >}} Other
-Retrieve a list of the latest model findings[^6] or recent activity.[^7]
+Retrieve a list of the latest model findings[^5] or recent activity.[^6]
 
 :::
 
@@ -110,7 +112,7 @@ Retrieve a list of the latest model findings[^6] or recent activity.[^7]
 
 4. Select **{{< fa plus >}} Add Widget**.
 
-5. Select the type of widget you'd like to add:[^8]
+5. Select the type of widget you'd like to add:[^7]
 
     - **{{< fa cubes >}} Model Inventory View**
     - **{{< fa warning >}} Model Findings View**
@@ -126,7 +128,7 @@ Retrieve a list of the latest model findings[^6] or recent activity.[^7]
 
 7. Confirm that your widget appears as expected. 
 
-    You can also rearrange the position of the widget to your liking.[^9]
+    You can also rearrange the position of the widget to your liking.[^8]
 
 ### Remove widgets
 
@@ -148,20 +150,18 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage widgets](#manage-widgets)
+[^1]: [Manage dashboards](#manage-dashboards)
 
-[^2]: [Manage dashboards](#manage-dashboards)
+[^2]: [Manage custom inventory views](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
 
-[^3]: [Manage custom inventory views](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
+[^3]: [Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
 
-[^4]: [Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
+[^4]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
 
-[^5]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
+[^5]: [Working with model findings](/guide/model-validation/working-with-model-findings.qmd)
 
-[^6]: [Working with model findings](/guide/model-validation/working-with-model-findings.qmd)
+[^6]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^7]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^7]: [Widget types](#widget-types)
 
-[^8]: [Widget types](#widget-types)
-
-[^9]: [Arrange widgets](#arrange-widgets)
+[^8]: [Arrange widgets](#arrange-widgets)
