--- a/site/guide/configuration/manage-groups.qmd
+++ b/site/guide/configuration/manage-groups.qmd
@@ -28,9 +28,10 @@ Users must belong to a default group of `All`, and can belong to mulitple groups
 
 3. Groups are listed with their names and any provided descriptions. 
 
-   Expand **See Details {{< fa chevron-right >}}** to:
-      - View the complete list of members in any group.
-      - View models visible to the group.
+   Click on a group to:
+      - View the complete list of members in that group.
+      - Add or remove members from that group.[^2]
+      - View models visible to that group.
 
 ## Add new groups
 
@@ -45,9 +46,9 @@ You can only remove non-default groups.
 
 2. Under User Permissions, select **Groups**.
 
-3. Expand **See Details >** for the group you want to remove.
+3. Click on the group you want to remove to expand that group.
 
-4. Click **{{< fa trash-can >}} Delete Group** to remove it.
+4. Select **{{< fa trash-can >}} Delete Group** to remove it.
 
 5. After you confirm, the group will be permanently removed.
 
@@ -59,3 +60,5 @@ You can only remove non-default groups.
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Add or remove group members](#add-or-remove-group-members)
