--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -32,7 +32,7 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 1. Select the **Users** tab, where you can:
 
       - View a list of users assigned to that role.
-      - Add a role to users on that list.
+      - Add a role to users already on that list.
 
 ::: {.panel-tabset}
 
