--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -36,7 +36,7 @@ _"As an **administrator** who has set up user access to the {{< var validmind.pl
 <br>
 This third module is part of a four-part series:
 <br><br>
-[Validator Fundamentals](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button target="_blank"}
+[Administrator Fundamentals](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
@@ -483,17 +483,30 @@ Set up attestations
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/attestations" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--l .three-quarters .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Set up an attestation**
+**Add an attestation**
 :::
 
 1. Click **{{< fa plus >}} Add Attestation**.
 2. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation.
-3. Click on the name of the attestation you added to configure it:
-    - Click **{{< fa plus >}} Add Attestation Period** and add a period.
-    - Under Relevant Attestation Fields, drag **Relevant Attestation Fields** to display in model snapshots.
-    - Under Questionnaire Template, click the template area to edit.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/attestations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--l .three-quarters .auto-collapse-10}
+**Configure an attestation**
+
+Click on the name of the attestation you added previously to configure it:
+
+1. Click **{{< fa plus >}} Add Attestation Period** and add a period.
+    - Enter in the **[name]{.smallcaps}**, **[start date]{.smallcaps}**, and **[end date]{.smallcaps}**.
+    - Click **Add Period**.
+2. Under Relevant Attestation Fields, drag fields into the **Relevant Attestation Fields** column to display in model snapshots.
+3. Under Questionnaire Template, click the template area to edit, then click **Save** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
