--- a/site/guide/configuration/_add-groups.qmd
+++ b/site/guide/configuration/_add-groups.qmd
@@ -3,7 +3,7 @@
 
 1. Under User Permissions, select **Groups**.
 
-1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+1. Next to All Groups, click **{{< fa plus >}} Create Group** to open the Create New Group menu.
 
 1. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
 
@@ -17,7 +17,7 @@
 
 
 :::: {.content-hidden unless-format="revealjs"}
-1. Next to All Groups, click **{{< fa plus >}} Create New Group** to open the Create New Group menu.
+1. Next to All Groups, click **{{< fa plus >}} Create Group** to open the Create New Group menu.
 
 1. Enter a **[group name]{.smallcaps}** and **[group description]{.smallcaps}** for the new group and click **Continue**.
 
