--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -27,13 +27,15 @@ Personalize your user experience and ensure you have access to the necessary too
    - Roles attached to your account
    - Groups assigned to your account
    - Onboarding and user interface preferences
+   - Terms of service agreements statuses
+   - Localization preferences
    - Access keys
    - Password reset
 
-::: {.panel-tabset}
-
 ### Onboarding
 The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
+
+::: {.panel-tabset}
 
 #### Getting started guide
 - Toggle [**getting started guide**]{.smallcaps} on to display the interactive onboarding guide.
@@ -42,6 +44,8 @@ The {{< var vm.platform >}} provides an interactive onboarding journey right in 
 #### Restart onboarding
 1. Under Onboarding, ensure that [**getting started guide**]{.smallcaps} is toggled on.
 2. Click **Restart** to reset your onboarding progress.
+
+:::
 
 ### User Interface Preferences
 
@@ -52,13 +56,19 @@ Under User Interface Preferences, you can switch between the dark and light mode
 
 The selected theme setting is saved to your user profile and applied across all devices where you log in.
 
+### Terms
+
+Review or accept our terms and conditions and AI terms of use.[^1]
+
 ### Localization
 
-Set the **[date format]{.smallcaps}** for date and datetime fields under localization.
+Set the **[date format]{.smallcaps}** for date and datetime fields[^2] under localization.
 
 ### Access Keys
 
 View your [api key]{.smallcaps} and [secret key]{.smallcaps} under Access Keys:
+
+::: {.panel-tabset}
 
 #### [api key]{.smallcaps}
 To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
@@ -67,6 +77,8 @@ To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
 - To copy your secret key, click **{{< fa clipboard >}} Copy to Clipboard**.
 - To reveal your secret key, click **{{< fa eye >}} Reveal**.
 
+:::
+
 ### Change Password
 
 To change your password:
@@ -74,4 +86,9 @@ To change your password:
 1. Enter a new password in **[new password]{.smallcaps}**, or click **Generate strong password** to automatically generate a suggested password.
 2. Click **Update Password** to apply the new password.
 
-:::
+
+<!-- FOOTNOTES -->
+
+[^1]: [Legal Ease.](https://validmind.com/about/legal/)
+
+[^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
