--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -141,11 +141,13 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 2. Click on the tab for the dashboard you would like to remove widgets from.
 
-3. Hover over the widget you would like to remove.
+3. Click **{{< fa pencil >}} Edit Dashboard**.
 
-4. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
+4. Hover over the widget you would like to remove.
 
-5. After you confirm, your widget will be removed from your dashboard.
+5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select [**{{< fa trash-can >}} Remove**]{.red}.
+
+6. After you confirm, your widget will be removed from your dashboard.
 
 
 <!-- FOOTNOTES -->
