Workflows & inventory  done

--- a/site/guide/model-inventory/_inventory-field-types.qmd
+++ b/site/guide/model-inventory/_inventory-field-types.qmd
@@ -43,10 +43,12 @@ URL
 Date
 : - Date value in `yyyy-mm-dd` format. 
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
+- Set the [date format]{.smallcaps} for date fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
 
 Date Time
 : - Date value in `yyyy-mm-dd, 24hr` format.
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
+- Set the [date format]{.smallcaps} for date time fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
 
 Email
 : Text value in valid email (`user@domain.com`) format.
