--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -45,6 +45,8 @@ To change a model's stage:
 
 4. You can then select the appropriate stage for the model.
 
+5. Click **Save** to transition the model into your selected stage.
+
 ::: {.panel-tabset}
 
 #### Archive models
