--- a/site/guide/model-inventory/configure-model-interdependencies.qmd
+++ b/site/guide/model-inventory/configure-model-interdependencies.qmd
@@ -37,7 +37,7 @@ affected by or affects other models in your inventory.
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. Click **Manage Dependencies** to open up the model interdependencies detail menu.
+3. Click **{{< fa square-plus >}} Manage Dependencies** to open up the model interdependencies detail menu.
 
 4. Select either the **{{< fa arrow-up >}} Upstream** or **{{< fa arrow-down >}} Downstream** tab:
 
