--- a/site/guide/model-inventory/customize-model-inventory-layout.qmd
+++ b/site/guide/model-inventory/customize-model-inventory-layout.qmd
@@ -27,7 +27,7 @@ In the left sidebar, click **{{< fa cubes >}} Inventory**:
 ::: {.panel-tabset}
 
 #### Card view
-- To display the inventory in card view, click **Display Cards**.
+- To display the inventory in card view, click **{{< fa grip >}} Display Cards**.
 - By default, the model name, purpose, tier, owner, and status are displayed on each card.
 
 #### Table view
