--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -19,14 +19,13 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. Hover over a field until the **{{< fa pencil >}}** appears, then click to make your changes:
+3. Hover over a field until the **{{< fa pencil >}}** appears, then click to make your changes.
 
-   - Click **Save** to apply your changes.
-   - Click **Cancel** to discard your changes.
+4. Click **Save** to apply your changes.
 
 ### Manage model stakeholders
 
