--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -19,6 +19,12 @@ aliases:
 
 ## Add or edit inventory fields
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+    Here you can edit existing inventory fields, or add a new one:
+
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
 #### Inventory field types
@@ -31,9 +37,9 @@ aliases:
 
 2. Under Models, select **Model Inventory Fields**.
 
-3. Select **{{< fa pencil >}} Edit** under the Actions column for the field you'd like to delete.
+3. Hover over the field you would like to delete.
 
-4. Click **Delete**.
+4. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, click on it and select [**{{< fa trash-can >}} Delete Field**]{.red}.
 
 5. After you confirm, the field will be removed.
 
