--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -48,7 +48,7 @@ Comment settings
 
 #### Status Updates
 
-Shows model status transitions.[^4]
+Shows model stage transitions.[^4]
 
 #### Model Updates
 
@@ -78,7 +78,7 @@ Shows test results logged for your model via the {{< var validmind.developer >}}
 
 [^3]: [Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^4]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
 
 [^5]: [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
 
