--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -1,17 +1,27 @@
 :::: {.content-visible unless-format="revealjs"}
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+::: {.panel-tabset}
 
-    - To add a new field, click **{{< fa plus >}} Add Field**. 
-    - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
+#### Add inventory field
+To add a new field, click **{{< fa plus >}} Add Field**:
 
-1. Fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
+a. Fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
-    - You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
-    - You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
+    - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
-1. When you are satisfied with the setup of your field, click **Save**.
+a. When you are satisfied with the setup of your field, click **Save**.
+
+#### Edit inventory field
+To edit an existing field:
+
+a. Hover over the field you would like to edit.
+
+a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column,, select **{{< fa pencil >}} Edit**.
+
+a. Make your desired changes to your field, then click **Save**.
+
+:::
 
 
 <!-- ADDITIONAL FOOTNOTES -->
@@ -36,13 +46,13 @@
 
 1. Under Models, select **Model Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
-    - To add a new field, click **{{< fa plus >}} Add Field**. 
-    - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
+    - Click **{{< fa plus >}} Add Field** to add a new field.
+    - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
 
 1. Fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
-    - You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
-    - You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
+    - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
 
 1. When you are satisfied with the setup of your field, click **Save**.
 
