--- a/site/guide/model-workflows/_workflow-states.qmd
+++ b/site/guide/model-workflows/_workflow-states.qmd
@@ -6,10 +6,15 @@ Workflow states are statuses unique to a specific workflow, discrete from model 
 Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,^[[Configure workflow steps](/guide/model-workflows/configure-model-workflows.qmd#configure-workflow-steps)] or via the **{{< fa gear >}} Settings** page:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 2. Under Workspace, select **Workflow States**.
+
 3. Click on the workflow you'd like to modify workflow states for.
+
 4. Click **{{< fa gear >}} Add New Workflow State**.
+
 5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
+
 6. Click **Save** to create the workflow state.
 
 #### Delete workflow states
@@ -19,9 +24,13 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 2. Under Workspace, select **Workflow States**.
+
 3. Click on the workflow you'd like to delete workflow states for.
+
 4. Hover over the workflow state until the **{{< fa trash-can >}}** appears, then click on it.
+
 5. After you confirm, the workflow state will be removed.
 
 ::::
@@ -30,15 +39,6 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 :::: {.content-hidden unless-format="revealjs"}
 Workflow states are statuses unique to a specific workflow, discrete from model stages.
 
-#### Add workflow states
-
-Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or via the **{{< fa gear >}} Settings** page:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-2. Under Workspace, select **Workflow States**.
-3. Click on the workflow you'd like to modify workflow states for.
-4. Click **{{< fa gear >}} Add New Workflow State**.
-5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
-6. Click **Save** to create the workflow state.
+Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step, or [via the **{{< fa gear >}} Settings** page](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-states){target="blank"}.
 
 ::::
