--- a/site/guide/templates/_add-text-blocks.qmd
+++ b/site/guide/templates/_add-text-blocks.qmd
@@ -4,7 +4,7 @@ To create a new text block via the block library:
 
 1. Under Documents, select **Block Library**.
 
-1. Click **Add New Block** and enter:
+1. Click **Add Block** and enter:
  
     - The **[name]{.smallcaps}** of your text block
     - (Optional) A **[description]{.smallcaps}** for your text block
