--- a/site/guide/templates/_customize-documentation-templates.qmd
+++ b/site/guide/templates/_customize-documentation-templates.qmd
@@ -9,15 +9,14 @@
    - **Validation Report**
    - **Ongoing Monitoring**
 
-1. Locate the template to edit and on the template details page, click **{{< fa pencil >}} Edit Outline**. 
+1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
 1. In outline editing mode, you can: 
 
    a. **Expand sections:**
       - Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
 
-   a. **Add content to sections:**
-      - For validation report templates, you're able to add additional content. 
+   a. **Add content to sections:** [validation reports only]{.smallercaps .pink}
       - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a **Guideline Block**.^[[Add guidelines to templates](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates)]
 
    a. **Rename sections:** 
@@ -31,7 +30,8 @@
       - To add a subsection within the current section, select **{{< fa arrow-right >}} Subsection**.
 
    a. **Remove sections:**
-      - Click **{{< fa trash-can >}}** to delete a section. 
+      - Hover over the section you want to delete. 
+      - When the **{{< fa trash-can >}}** appears, click on it. 
       - After you confirm, that section will be removed. 
 
    a. **Reorder sections:** 
@@ -56,15 +56,14 @@ Customize {{< var vm.product >}}'s templates for model documentation, validation
    - **Validation Report**
    - **Ongoing Monitoring**
 
-1. Locate the template to edit and on the template details page, click **{{< fa pencil >}} Edit Outline**. 
+1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
 1. In outline editing mode, you can: 
 
    a. **Expand sections:**
       - Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
 
-   a. **Add content to sections:**
-      - For validation report templates, you're able to add additional content. 
+   a. **Add content to sections:** [validation reports only]{.smallercaps}
       - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a [**Guideline Block**](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates){target="_blank"}.
 
    a. **Rename sections:** 
@@ -78,7 +77,8 @@ Customize {{< var vm.product >}}'s templates for model documentation, validation
       - To add a subsection within the current section, select **{{< fa arrow-right >}} Subsection**.
 
    a. **Remove sections:**
-      - Click **{{< fa trash-can >}}** to delete a section. 
+      - Hover over the section you want to delete. 
+      - When the **{{< fa trash-can >}}** appears, click on it. 
       - After you confirm, that section will be removed. 
 
    a. **Reorder sections:** 
