--- a/site/guide/templates/_view-documentation-templates.qmd
+++ b/site/guide/templates/_view-documentation-templates.qmd
@@ -17,8 +17,10 @@
    - Template type
    - Template description
    - Template owner
+   - When that template was created
+   - Models using that template
    - Template version
-   - Models using that template version
+   - Models using that specific template version
    - Template outline —
       - Sections in the template and how they are structured
       - Guidelines associated with each section
@@ -30,14 +32,14 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Documents, select **Templates**.
+1. Under Documents, select **Templates**.
 
-3. Select one of the following template types from the tabs:
+1. Select one of the following template types from the tabs:
 
    - **Documentation**
    - **Validation Report**
    - **Ongoing Monitoring**
 
-<!-- 4. Click on one of the available templates. -->
+1. Click on one of the available templates.
 
 ::::
