--- a/site/guide/templates/customize-documentation-templates.qmd
+++ b/site/guide/templates/customize-documentation-templates.qmd
@@ -48,7 +48,7 @@ To add guidelines to your template, edit the YAML template directly.
    - **Validation Report**
    - **Ongoing Monitoring**
 
-4. Locate the template to edit and on the template details page, click **{{< fa pencil >}} Edit Raw**. 
+4. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Raw**. 
 
 5. In the Edit Template YAML editor that opens, make your changes according to the template schema,[^4] then click **Continue** to view a side-by-side comparison of your changes with the previous version of the template.
 
