--- a/site/guide/templates/swap-documentation-templates.qmd
+++ b/site/guide/templates/swap-documentation-templates.qmd
@@ -34,6 +34,8 @@ Swap between different versions of your model documentation or validation report
    - **[validation report template]{.smallcaps}** — Lists the template used for validation reports.[^4]
    - **[ongoing monitoring template]{.smallcaps}** — Lists the template used for ongoing monitoring plans.[^5]  
 
+5. Click on the named version of the template, then select **{{< fa eye >}} View Template Details** to open the details for the template applied to that model.
+
 ## Swap templates
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
@@ -42,43 +44,20 @@ Swap between different versions of your model documentation or validation report
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
-4. On your Document Overview, Validation Report Overview, or Ongoing Monitoring page click on the name and the version of the template under:
+4. On your Document Overview, Validation Report Overview, or Ongoing Monitoring page click on the named version of the template under:
    
    - Document Overview — **[document template]{.smallcaps}**[^7]
    - Validation Report — **[validation report template]{.smallcaps}**[^8]
    - Ongoing Monitoring — **[ongoing monitoring template]{.smallcaps}**[^9]
-   
-   The window pane that opens shows the YAML for the current template along with other information, such as the name and the current version,[^10] and which models are using this template.
 
-5. Click **Swap Template**. 
-   
-   The window pane now shows the YAML for two templates side-by-side:
-   
-      - On the left, your current template is shown.
-      - On the right, you can select a different template and version.
-   
-   Initially, both templates are the same. 
+5. Select **{{< fa sync >}} Update Document Template**:
 
-6. On the right, select a different template or version:
-   
-   - **[template]{.smallcaps}** — Change to a different template entirely.
-   - **[version]{.smallcaps}** — Change to a different version of the template you selected.
-   
-   For example, select a newer version of the template currently in use to switch to that version. 
-   
-   After you select a different template or version, the YAML differences between the templates are highlighted. 
+   - Under **[template]{.smallcaps}**, choose a new template to switch to.
+   - Under **[version]{.smallcaps}**, choose a different version of the same template to switch to.
 
-7. Click **Prepare Swap**.
+6. Review the differences between the switched templates or template versions to confirm that you want to apply those changes.
 
-8. Enter a note to enable completing the swap and click **Swap Template**.
-
-![Swapping a documentation template version](swap-template-version.gif){fig-alt="A gif showcasing swapping a documentation template version" .screenshot width=90%}
-
-After your model documentation template has been swapped successfully, you can continue to work on your model documentation.
-
-::: {.callout title="Reusing old content"}
-If you added a simple text block to your old template and want to reuse the content, you can temporarily switch back to the old template, copy the content, swap back to the new template, and then paste in the content.
-:::
+7. Click **Apply Changes to Template** to complete the swap.
 
 ## What's next
 
@@ -106,4 +85,4 @@ If you added a simple text block to your old template and want to reuse the cont
 
 [^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^10]: [Customize documentation templates](customize-documentation-templates.qmd)
+<!-- [^10]: [Customize documentation templates](customize-documentation-templates.qmd) -->
