--- a/site/guide/templates/_duplicate-template.qmd
+++ b/site/guide/templates/_duplicate-template.qmd
@@ -11,13 +11,11 @@ To duplicate an existing template and start with version one of that new templat
    - **Validation Report**
    - **Ongoing Monitoring**
 
-4. Locate the template to duplicate and on the template details page, click **{{< fa copy >}} Duplicate Template**. 
+4. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
 5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 
 6. Click **Duplicate Template** to create a copy of your template.
-
-![Duplicating a template](/guide/templates/duplicate-template.gif){fig-alt="A gif demonstrating duplicating a template" .screenshot width=90%}
 
 Once duplicated, customize your new template to your needs, making it available for use with model documentation or validation reports.
 
@@ -37,7 +35,7 @@ To duplicate an existing template and start with version one of that new templat
    - **Validation Report**
    - **Ongoing Monitoring**
 
-4. Locate the template to duplicate and on the template details page, click **{{< fa copy >}} Duplicate Template**. 
+4. Click on the template to duplicate and on the template details page, select **{{< fa copy >}} Duplicate Template**. 
 
 5. In the Duplicate Template modal that opens, give your copy a **[template name]{.smallcaps}** and a **[template description]{.smallcaps}**.
 
