Model documentation done

--- a/site/guide/model-documentation/_add-content-blocks.qmd
+++ b/site/guide/model-documentation/_add-content-blocks.qmd
@@ -6,6 +6,6 @@
 
 1. Click on a section header to expand that section and add content.
 
-1. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
+1. Hover your mouse over the space where you want your new block to go until a horizontal line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
 
     ![Adding a content block in the {{< var validmind.platform >}}](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
