--- a/site/guide/model-documentation/_commenting.qmd
+++ b/site/guide/model-documentation/_commenting.qmd
@@ -18,11 +18,11 @@
 
 1. Click the highlighted text portion to view the thread, then click [{{< fa check >}}]{.green} to resolve the thread.
 
-2. To view the resolved comment thread, click the **{{< fa envelope-circle-check >}} Comments archive** button in the toolbar. 
+2. To view the resolved comment thread, click the **{{< fa comments >}} Comments archive** button in the toolbar. 
 
     You can view a history of all archived comments in the Comment archive.
 
-To reopen a comment thread, reply to the comment thread in the Comment archive or click the **{{< fa reply >}} Reopen** button that appears next to the highlighted text portion.
+To reopen a comment thread, reply to the comment thread in the Comment archive or click the **{{< fa reply >}} Reopen** button in the header of that comment thread.
 
 
 
