--- a/site/guide/model-documentation/collaborate-with-others.qmd
+++ b/site/guide/model-documentation/collaborate-with-others.qmd
@@ -57,35 +57,52 @@ While working with content blocks in documentation,[^4] you can suggest changes 
 
 While working with content blocks in documentation,[^5] you can save named versions of your edits to retain specific revisions you'd like to keep. 
 
-### Save a version
-
 1. Click the **{{< fa clock-rotate-left >}} Revision history** button in the toolbar.
 
-2. In the dropdown, click **Save current version**. 
+2. Once you save a version, you can then view revision history, compare versions, rename versions, or restore to a previous version.
 
-    - Optionally, enter a version name. 
-    - The default name is the date and time the latest change was made.
+3. Select **Save current version** to save your current version:
+
+    a. Optionally, enter a version name.
+    b. The default name is the date and time the latest change was made.
+
+::: {.panel-tabset}
+
 
 ### View revision history
 
-1. Click the **{{< fa clock-rotate-left >}} Revision history button** in the toolbar, then click **Open revision history**. 
+a. Click **{{< fa clock-rotate-left >}} Revision history** and select **Open revision history** to view a history of all saved versions as well as your current version.
 
-    Here, you can view a history of all saved versions and your current version.
-
-2. To see the the change made with each version, select the version in the right sidebar. 
+b. To see the the change made with each version, select the version in the right sidebar. 
 
     - Changes made in that version are highlighted. 
     - Hover over the highlighted content to see who made the change.
 
+### Compare versions
+
+a. Click **{{< fa clock-rotate-left >}} Revision history** and select **Open revision history**. 
+
+b. Click on the version you would like to compare another version to.
+
+c. Hover over the other version to compare with your first version.
+
+d. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **Compare against selected**.
+
+### Rename a version
+
+a. Click **{{< fa clock-rotate-left >}} Revision history** and select **Open revision history**. 
+
+b. Click on the title of the version you want to rename to change it.
+
 ### Restore a version
 
-1. To restore a version, click the **{{< fa clock-rotate-left >}} Revision history button** in the toolbar.
+a. Click **{{< fa clock-rotate-left >}} Revision history** and select **Open revision history**. 
 
-2. Double-click to select the desired version and click **Restore this version**.
+b. Click on the desired version and select **Restore this version**.
 
-3. The restored version will now appear under revision history with the name: `Restored: 'version name'`. 
+c. The restored version will now appear under revision history with the name: `Restored: 'version name'`.
 
-    To exit revision history without restoring a version, click **{{< fa reply >}} Back to editing**.
+:::
 
 ## Commenting 
 
@@ -101,7 +118,7 @@ While working with content blocks in documentation,[^5] you can save named versi
 
 3. Edit your comment and click **Save**.
 
-To edit a comment in a resolved thread, follow the same steps but click the **{{< fa envelope-circle-check >}} Comments archive** button first to access the resolved thread.
+To edit a comment in a resolved thread, follow the same steps but click the **{{< fa comments >}} Comments archive** button first to access the resolved thread.
 
 ### Delete comments
 
@@ -111,7 +128,7 @@ To edit a comment in a resolved thread, follow the same steps but click the **{{
     
 3. After you confirm, the comment will be deleted.
 
-To delete a comment in a resolved thread, follow the same steps but click the **{{< fa envelope-circle-check >}} Comments archive** button first to access the resolved thread.
+To delete a comment in a resolved thread, follow the same steps but click the **{{< fa comments >}} Comments archive** button first to access the resolved thread.
 
 <!---
 ## Troubleshooting
