--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -342,7 +342,7 @@ With the custom test results logged, let's head to the model we connected to at 
 
 3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
@@ -369,7 +369,7 @@ With the custom test results logged, let's head to the model we connected to at 
 1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Locate the Data Preparation section and click on **3.2 Model Evaluation** to expand that section.
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
     - Click on **Custom** under [test-driven]{.smallcaps} in the left sidebar.
     - Select the two custom `ConfusionMatrix` tests you logged previously.
