--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -293,7 +293,7 @@ With the test results logged, let's head to the model we connected to at the beg
 
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
@@ -318,7 +318,7 @@ With the test results logged, let's head to the model we connected to at the beg
 1. Select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
     - Click on **VM Library** under [test-driven]{.smallcaps} in the left sidebar.
     - In the search bar, type in `HighPearsonCorrelation`.
